token creation is actually in TokenManager + normalized imports